# addiffusion

./: .gitignore  CLAUDE.md  README.md  discovery.md  experiment.md  phase1.md  phase2.md  plan.md  progress.md  pyproject.toml
configs/: default.yaml
docs/superpowers/plans/: 2026-04-08-reward-redesign.md
docs/superpowers/specs/: 2026-04-08-reward-redesign-design.md
scripts/: check_refine_action.py  eval_metrics.slurm  extract_optuna_results.py  g1_test.slurm  g2_compare.py  optuna_sweep.py  optuna_sweep.slurm  pilot_reward_v2.slurm  precompute_baseline_scores.py  precompute_baseline_scores.slurm  run_agent_inference.py  run_agent_inference.slurm  run_baselines.py  run_baselines.slurm  train.slurm  tune_lr.py  tune_lr.slurm  tune_reward.py
src/: train.py
src/agent/: episode.py  networks.py  ppo.py  state.py
src/baselines/: __init__.py  attend_excite.py  base.py  fixed_step.py  lcm.py  oracle.py  random_search.py  sag.py  sdxl_turbo.py
src/diffusion/: attention.py  pipeline.py  refine.py
src/evaluation/: compute_metrics.py  significance.py  vlm_judge.py
src/rewards/: reward.py
tests/: run_all.py  test_attention.py  test_baselines_attention.py  test_baselines_distill.py  test_baselines_fixed.py  test_baselines_search.py  test_compute_metrics.py  test_episode.py  test_g1.py  test_networks.py  test_pipeline.py  test_ppo.py  test_refine.py  test_reward.py  test_significance.py  test_state.py  test_training_toy.py  test_vlm_judge.py
