[project]
name = "addiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.12.0",
    "clean-fid>=0.1.35",
    "clip>=0.2.0",
    "datasets>=2.14.4",
    "diffusers==0.32.2",
    "gymnasium>=1.2.3",
    "hpsv2>=1.2.0",
    "hydra-core>=1.3.2",
    "image-reward>=1.5",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.32.0",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "protobuf>=3.20.3",
    "pyarrow>=12.0,<15.0",
    "python-dotenv>=1.2.1",
    "safetensors>=0.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "timm>=0.6.13",
    "torch==2.6.0",
    "torch-fidelity>=0.3.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.2",
    "transformers==4.48.1",
    "wandb>=0.24.1",
    "xformers==0.0.29.post2",
    "numpy<2"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true   # CRITICAL: only use this index for packages explicitly mapped below

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
